--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <li>Follow the prompts to confirm the deletion of your account.</li>
   </ol>
   <p>If you have trouble deleting your account, you can contact us at:</p>
-  <p>Email: <a href="mailto:support@yourapp.com?subject=Account%20Deletion%20Request">support@yourapp.com</a></p>
+  <p>Email: <a href="mailto:aphomeofficial12@gmail.com?subject=Account%20Deletion%20Request">aphomeofficial12@gmail.com</a></p>
 </body>
 </html>
